<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/white_rectangle"
    tools:context=".ui.ConfirmDialog">

    <TextView
        android:id="@+id/message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/gap_size_20"
        android:layout_marginTop="@dimen/gap_size_20"
        android:layout_marginEnd="@dimen/gap_size_20"
        android:gravity="center"
        android:minHeight="@dimen/gap_size_100"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/app_name" />

    <include
        android:id="@+id/divider"
        layout="@layout/divider_h"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/gap_size_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/message" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider">

        <TextView
            android:id="@+id/POSITIVE"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_sure"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_18"
            tools:text="@string/text_sure" />

        <include
            layout="@layout/divider_v"
            android:layout_width="@dimen/gap_size_1"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/NEGATIVE"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_cancel"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_18"
            tools:text="@string/text_cancel" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>